--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-# .env is better suited for public variables, ie, variables that should not commited
-# For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
 
-# https://www.builder.io/c/docs/using-your-api-key
-VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
-PING_MESSAGE="ping pong"
+# Razorpay API Keys
+RAZORPAY_KEY_ID=rzp_test_R7Eb3fPR7PgOqs
+RAZORPAY_KEY_SECRET=K57FJGOD2wrojY6SWB5gn6OD
+
+# MongoDB Connection
+MONGODB_URI=mongodb://localhost:27017/edusathi
