--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/router": "^1.15.3",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mongoose": "^8.17.2",
     "razorpay": "^2.9.6",
     "react-router": "^6.22.3",
     "zod": "^3.25.76"
