--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "fusion-client",
+  "$schema": "https://json.schemastore.org/package.json",
+  "name": "edusathi-client",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -49,6 +50,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
