--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,86 @@
 {
-  "$schema": "https://json.schemastore.org/package.json",
+  
   "name": "fusion-server",
+  
   "version": "1.0.0",
+  
   "type": "module",
+  
   "scripts": {
-    "dev": "nodemon",
-    "build": "tsc",
-    "start": "node dist/index.js"
+  
+    
+  "dev": "nodemon",
+  
+    
+  "build": "tsc",
+  
+    
+  "start": "node dist/index.js"
+  
   },
+  
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "mongoose": "^8.17.2",
-    "razorpay": "^2.9.6",
-    "zod": "^3.25.76"
+  
+    
+  "bcryptjs": "^2.4.3",
+  
+    
+  "cors": "^2.8.5",
+  
+    
+  "dotenv": "^17.2.1",
+  
+    
+  "express": "^5.1.0",
+  
+    
+  "jsonwebtoken": "^9.0.2",
+  
+    
+  "mongoose": "^8.17.2",
+  
+    
+  "multer": "^1.4.5-lts.1",
+  
+    
+  "path-to-regexp": "^6.2.0",
+  
+    
+  "razorpay": "^2.9.6",
+  
+    
+  "zod": "^3.25.76"
+  
   },
+  
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.19.11",
-    "nodemon": "^3.0.3",
-    "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+  
+    
+  "@types/bcryptjs": "^2.4.6",
+  
+    
+  "@types/cors": "^2.8.17",
+  
+    
+  "@types/express": "^4.17.21",
+  
+    
+  "@types/jsonwebtoken": "^9.0.7",
+  
+    
+  "@types/multer": "^1.4.12",
+  
+    
+  "@types/node": "^20.19.11",
+  
+    
+  "nodemon": "^3.0.3",
+  
+    
+  "tsx": "^4.7.1",
+  
+    
+  "typescript": "^5.3.3"
+  
   }
 }
