--- a/server/.env.example
+++ b/server/.env.example
@@ -13,3 +13,9 @@ RAZORPAY_KEY_SECRET=dummy_secret
 
 # Misc
 PING_MESSAGE=ping
+
+# JWT Auth
+JWT_ACCESS_SECRET=super_secret_access
+JWT_REFRESH_SECRET=super_secret_refresh
+JWT_ACCESS_EXPIRES=15m
+JWT_REFRESH_EXPIRES=7d
