--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "express": "^5.1.0",
     "mongoose": "^8.17.2",
     "razorpay": "^2.9.6",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
