--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node start.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -21,14 +20,6 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^20.19.11",
-    "nodemon": "^3.0.3",
-    "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "nodemon": "^3.0.3"
   }
 }
