--- a/server/.env
+++ b/server/.env
@@ -19,3 +19,8 @@ JWT_ACCESS_SECRET=super_secret_access
 JWT_REFRESH_SECRET=super_secret_refresh
 JWT_ACCESS_EXPIRES=15m
 JWT_REFRESH_EXPIRES=7d
+
+# Dashboard credentials
+EMAIL_USER=edusathi@gmail.com
+EMAIL_PASSWORD=Edusathi@2025
+
