--- a/server/.env
+++ b/server/.env
@@ -21,6 +21,6 @@ JWT_ACCESS_EXPIRES=15m
 JWT_REFRESH_EXPIRES=7d
 
 # Dashboard credentials
-EMAIL_USER=edusathi@gmail.com
-EMAIL_PASSWORD=Edusathi@2025
+VITE_ADMIN_EMAIL=admin@edusathi.com
+VITE_ADMIN_PASSWORD=edusathi2025
 
